# pytorch-flows

./: .gitignore  LICENSE  README.md  environment.yml  pyproject.toml  setup.py
data/: .gitignore
experiments/: __init__.py  exp.py
experiments/.template_exp/: README.md
logs/: README.md
src/config_utils/: cli.py  registry.py
src/config_utils/test/: test_partial_registration.py
src/flow_utils/: __init__.py  flow_create  flow_create.py  flow_init.py  path_utils.py
src/flow_utils/.template_exp/: run.py
src/flow_utils/.template_exp/viz/: visualize.ipynb
src/flow_utils/template_exp/: run.py
src/pipeline/: pipeline.py
src/pipeline/test/: basic.py
src/pipeline_utils/: README.md  cache.py  conversion.py  pipeline.py  pipeline_decorator.py
src/pipeline_utils/test/: basic.py  cache.py  decorator.py  step1.npz  step2.npz  step3.npz  test_cache.py  test_cache_with_conversion.py  test_conversion.py  test_dataclass_type.py  test_hashing.py  test_pipeline.py  test_pipeline_no_decorator.py  test_timings.py
src/test/: test_tyro_submodules.py
src/test/test_pathmanager/: run.py
src/test/test_relative_imports/: run.py
src/test/test_relative_imports/module/: a.py
src/tyro_test/: a.py  b.py  complex.py  mwi.py  simple.py
src/viz_utils/test/: test_stack_of_images.py  test_webagg_widgets.py
