[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "flows-workspace"
version = "0.5.1"
description = "A simple, configurable, flow-based experiment manager"
authors = [
  {email = "nishimuramarky@yahoo.com"},
  {name = "Mark Nishimura"}
]
dependencies = [
  "tyro>=0.3.37",
  "networkx>=2.8.7",
  "metrohash>=0.3.3"
]

[tools.setuptools]
package-dir = [{"" = "src"}]
packages = ["flow_utils", "config_utils", "pipeline_utils"]

[project.scripts]
flow_init = "flow_utils.flow_init:hook"
flow_create = "flow_utils.flow_create:hook"
